[package]
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
description = "A simple, intuitive, express-like HTTP library"
documentation = "https://docs.rs/eve-rs"
edition = "2018"
homepage = "https://github.com/bytesonus/eve-rs"
license = "MIT"
name = "eve-rs"
repository = "https://github.com/bytesonus/eve-rs"
version = "0.2.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cookies = []
default = ["cookies", "render"] #, "file-uploader"]
file-uploader = ["multer", "rust-s3"]
render = ["handlebars"]

[dependencies]
async-trait = "0.1.36"
chrono = "0.4.13"
colored = "2.0.0"
flate2 = "1.0.16"
futures = "0.3.5"
hyper = {version = "0.14", features = ["server", "http1", "http2", "tcp"]}
log = "0.4.11"
regex = "1.3.9"
serde = "1.0.114"
serde_json = "1.0.57"
serde_urlencoded = "0.6.1"
tokio = {version = "1", features = ["full"]}

handlebars = {version = "3.5.1", optional = true}
multer = {version = "1.2.2", optional = true}
rust-s3 = {version = "0.26.4", optional = true}
