[package]
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
description = "A simple, intuitive, express-like HTTP library"
documentation = "https://docs.rs/eve-rs"
edition = "2021"
homepage = "https://github.com/bytesonus/eve-rs"
license = "MIT"
name = "eve-rs"
repository = "https://github.com/bytesonus/eve-rs"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
colored = "2"
flate2 = "1"
futures = "0.3"
hyper = {version = "0.14", features = ["server", "http1", "http2", "tcp"]}
log = "0.4"
regex = "1"
serde = "1"
serde_json = "1"
tokio = {version = "1", features = ["full"]}
handlebars = {version = "4"}
thiserror = "1"
serde_qs = "0.10"
tokio-tungstenite = "0.17"
base64 = "0.13"
sha1 = "0.10"
serde_urlencoded = "0.7"
